--- a/stats/.env.example
+++ b/stats/.env.example
@@ -1,3 +1,2 @@
-PLAUSIBLE_KEY=# openssl rand -base64 48
-PLAUSIBLE_ADMIN_PASSWORD=# openssl rand -base64 32
-PLAUSIBLE_MAIL_PASSWORD=
+STATS_KEY=# openssl rand -base64 48
+STATS_MAIL_PASSWORD=
