--- a/stats/docker-compose.yml
+++ b/stats/docker-compose.yml
@@ -45,16 +45,13 @@ services:
       BASE_URL: https://stats.castelnuovo.dev
       DATABASE_URL: postgres://postgres:postgres@stats_db/plausible_db
       CLICKHOUSE_DATABASE_URL: http://stats_events:8123/plausible_events_db
-      SECRET_KEY_BASE: ${PLAUSIBLE_KEY:?error}
-      DISABLE_AUTH: true
-      DISABLE_REGISTRATION: true
-      ADMIN_USER_EMAIL: luca@castelnuovo.dev
-      ADMIN_USER_NAME: Luca Castelnuovo
-      ADMIN_USER_PWD: ${PLAUSIBLE_ADMIN_PASSWORD:?error}
+      SECRET_KEY_BASE: ${STATS_KEY:?error}
+      DISABLE_AUTH: "true"
+      DISABLE_REGISTRATION: "true"
       MAILER_EMAIL: stats@mail.castelnuovo.dev
       SMTP_HOST_ADDR: mail.castelnuovo.dev
       SMTP_USER_NAME: castelnuovo/production
-      SMTP_USER_PWD: ${PLAUSIBLE_MAIL_PASSWORD:?error}
+      SMTP_USER_PWD: ${STATS_MAIL_PASSWORD:?error}
       SMTP_HOST_SSL_ENABLED: true
     command: sh -c "sleep 10 && /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh db init-admin && /entrypoint.sh run"
     depends_on:
