Change how secrets get generated

--- a/authelia/.env.example
+++ b/authelia/.env.example
@@ -1,6 +1,6 @@
-AUTHELIA_JWT_KEY=# openssl rand -base64 32
-AUTHELIA_SESSION_KEY=# openssl rand -base64 32
-AUTHELIA_ENCRYPTION_KEY=# openssl rand -base64 32
+AUTHELIA_JWT_KEY=# openssl rand -hex 32
+AUTHELIA_SESSION_KEY=# openssl rand -hex 32
+AUTHELIA_ENCRYPTION_KEY=# openssl rand -hex 32
 AUTHELIA_DB_PASSWORD=
 AUTHELIA_MAIL_PASSWORD=
 AUTHELIA_LDAP_PASSWORD=
