--- a/minio/.env.example
+++ b/minio/.env.example
@@ -1,2 +1,2 @@
-MINIO_ROOT_PASSWORD=# openssl rand -base64 32
+MINIO_ROOT_PASSWORD=# openssl rand -hex 32
 MINIO_IDENTITY_LDAP_LOOKUP_BIND_PASSWORD=
