--- a/stats/docker-compose.yml
+++ b/stats/docker-compose.yml
@@ -46,8 +46,11 @@ services:
       DATABASE_URL: postgres://postgres:postgres@stats_db/plausible_db
       CLICKHOUSE_DATABASE_URL: http://stats_events:8123/plausible_events_db
       SECRET_KEY_BASE: ${STATS_KEY:?error}
-      DISABLE_AUTH: "true"
-      DISABLE_REGISTRATION: "true"
+      ADMIN_USER_NAME: admin
+      ADMIN_USER_EMAIL: plausible@mail.castelnuovo.dev
+      ADMIN_USER_PWD: admin
+      DISABLE_AUTH: true
+      DISABLE_REGISTRATION: true
       MAILER_EMAIL: stats@mail.castelnuovo.dev
       SMTP_HOST_ADDR: mail.castelnuovo.dev
       SMTP_USER_NAME: castelnuovo/production
