--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       WATCHTOWER_NOTIFICATIONS: email
       WATCHTOWER_NOTIFICATION_EMAIL_TO: luca@castelnuovo.dev
       WATCHTOWER_NOTIFICATION_EMAIL_FROM: watchtower@mail.castelnuovo.dev
-      WATCHTOWER_NOTIFICATION_EMAIL_SERVER: mail.castelnuovo.dev
+      WATCHTOWER_NOTIFICATION_EMAIL_SERVER: mail.vm.castelnuovo.dev
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT: 25
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER: castelnuovo/production
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD: ${WATCHTOWER_MAIL_PASSWORD:?error}
