--- a/invoice/docker-compose.yml
+++ b/invoice/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       MAIL_PORT: 25
       MAIL_USERNAME: castelnuovo/production
       MAIL_PASSWORD: ${INVOICE_MAIL_PASSWORD:?error}
-      MAIL_ENCRYPTION: starttls
+      MAIL_ENCRYPTION: tls
       MAIL_FROM_ADDRESS: invoice@mail.castelnuovo.dev
       MAIL_FROM_NAME: Castelnuovo Development
 
