--- a/traefik/config/config.yml
+++ b/traefik/config/config.yml
@@ -67,6 +67,13 @@ http:
           - Remote-Name
           - Remote-Email
 
+    vpn:
+      ipWhiteList:
+        sourceRange:
+          - 127.0.0.1/32
+          - 10.0.20.1/24
+          - 10.0.50.1/24
+
     securityHeaders:
       headers:
         customResponseHeaders:
